# solidity-audit-ai

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
auditor/: __init__.py  cli.py  engine.py  models.py  report.py  source.py  webapp.py
auditor/detectors/: __init__.py  base.py  builtin.py  slither_bridge.py
auditor/llm/: __init__.py  anthropic_provider.py  base.py  offline.py  openai_provider.py
auditor/static/css/: app.css
auditor/static/js/: app.js
auditor/templates/: base.html  index.html
auditor/templates/partials/: footer.html  nav.html
samples/safe/: SafeBank.sol  SafeLottery.sol  SafeToken.sol  SafeWallet.sol
samples/vulnerable/: AccessControl.sol  Delegatecall.sol  IntegerOverflow.sol  Lottery.sol  Reentrancy.sol  Selfdestruct.sol  TxOriginAuth.sol  UncheckedCall.sol
tests/: conftest.py  test_cli.py  test_detectors.py  test_engine_and_report.py  test_source.py  test_webapp.py
